--- a/TestMvcApp/TestMvcWeb/Views/Home/About.cshtml
+++ b/TestMvcApp/TestMvcWeb/Views/Home/About.cshtml
@@ -4,4 +4,5 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
+<h1>Cookie data saved : @ViewBag.time</h1>
 <p>Use this area to provide additional information.</p>
